--- a/src/components/subMenu/style.module.css
+++ b/src/components/subMenu/style.module.css
@@ -1,6 +1,7 @@
 .stickyContainer{
   position: absolute;
   width: 100vw;
+  max-width: 100%;
   bottom: 0;
   display: none;
 }
