--- a/src/components/viewport/style.module.css
+++ b/src/components/viewport/style.module.css
@@ -1,6 +1,7 @@
 .container {
   height: 100vh;
   width: 100vw;
+  max-width: 100%;
   position: relative;
   display: flex;
   align-items: center;
