--- a/src/pages/css/home.module.css
+++ b/src/pages/css/home.module.css
@@ -54,6 +54,7 @@
   max-width: 290px;
 }
 
+
 .locationCenterBlock {
   max-width: 400px;
   margin-bottom: 12px;
@@ -62,6 +63,12 @@
 .locationCenterBlock p{
   max-width: 350px;
 }
+
+.locationCenterBlock.home p{
+  max-width: 450px;
+}
+
+
 
 .gridTextBlock{
   text-align: left;
